tests/baselines/reference/inheritSameNamePropertiesWithDifferentVisibility.errors.txt
inheritSameNamePropertiesWithDifferentVisibility.ts(9,11): error TS2320: Interface 'A' cannot simultaneously extend types 'C' and 'C2'.
  Named property 'x' of types 'C' and 'C2' are not identical.


==== inheritSameNamePropertiesWithDifferentVisibility.ts (1 errors) ====
    class C {
        public x: number;
    }
    
    class C2 {
        private x: number;
    }
    
    interface A extends C, C2 { // error
              ~
!!! error TS2320: Interface 'A' cannot simultaneously extend types 'C' and 'C2'.
!!! error TS2320:   Named property 'x' of types 'C' and 'C2' are not identical.
        y: string;
    }